<package>
  <name>basics</name>
  <version>0.0.0</version>
  <description>Packages from Part 1 of Programming Robots with ROS.</description>
  <maintainer email="wdsmart@gmail.com">Bill Smart</maintainer>
  <author>Bill Smart</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

</package>
