<package>
  <name>patrol</name>
  <version>0.0.0</version>
  <description>Patrol.</description>
  <maintainer email="wdsmart@gmail.com">Bill Smart</maintainer>
  <author>Bill Smart</author>
  <license>BSD</license>

  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>

  <build_depend>smach</build_depend>
  <run_depend>smach</run_depend>
</package>
